--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,9 @@
 <%- include('header') %>
 
-<h1>Convert</h1>
+<form method="GET" action="/cotation">
+  <input name="cotation" placeholder="Dolar cotation" /><br>
+  <input name="quantity" placeholder="Quantity" /><br>
+  <button>Convert !</button>
+</form>
 
 <%- include('footer') %>
