--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,8 @@
 
 <head>
   <title>Convert My Money</title>
+  <link href="/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <h1><a href="/"><img src="/logo.png" alt="Convert My Money" /></a></h1>
