--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('header') %>
 
 <form method="GET" action="/cotation">
-  <input name="cotation" placeholder="Dolar cotation" /><br>
+  <input name="cotation" placeholder="Dolar cotation" value="<%= cotacao %>" /><br>
   <input name="quantity" placeholder="Quantity" /><br>
   <button>Convert !</button>
 </form>
